missclick last change

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <div class="wrongPassword">
     <p class="titleOfMessage">Повідомлення про помилку з прогресивним вдосконаленням</p>
 
-  <input type="password" id="passwordInput" placeholder="Введіть пароль:">
-<input type="button" value="Відправити" id="buttonInput" onclick="giveErrorMessage()" >
-  <div class="wrongPassword"><p id="wrongMessage">Невірний пароль, спробуйте ще раз</p>
+  <input type="password" class="passwordInput" placeholder="Введіть пароль:">
+<input type="button" value="Відправити" class="buttonInput" onclick="giveErrorMessage()" >
+ <p class="wrongMessage">Невірний пароль, спробуйте ще раз</p>
     </div>
   </div>
  <script src="js/script.js"></script>
