Work is done!!!!

--- a/index.html
+++ b/index.html
@@ -43,15 +43,11 @@
 
   <!-- !4th message -->
   <div class="error-message">
-    <div class="wrongPassword">
     <p class="titleOfMessage">Повідомлення про помилку з прогресивним вдосконаленням</p>
-
   <input type="password" class="passwordInput" placeholder="Введіть пароль:">
-<input type="button" value="Відправити" class="buttonInput" onclick="giveErrorMessage()" >
+<input type="button" value="Відправити" class="buttonInput" onclick=giveErrorMessage() >
  <p class="wrongMessage">Невірний пароль, спробуйте ще раз</p>
     </div>
-  </div>
  <script src="js/script.js"></script>
 </body>
 </html>
-<!-- TODO: змінити айді на клас де потрібно та доробити 4 блок -->
